--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/react-native": "^0.63.23",
     "@types/styled-components": "^5.1.3",
     "babel-plugin-root-import": "^6.5.0",
+    "eslint-config-prettier": "^6.12.0",
     "expo": "~39.0.2",
     "expo-status-bar": "~1.0.2",
     "react": "16.13.1",
@@ -33,5 +34,11 @@
   "devDependencies": {
     "@babel/core": "~7.9.0"
   },
-  "private": true
+  "private": true,
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "prettier"
+    ]
+  }
 }
