--- a/package.json
+++ b/package.json
@@ -18,14 +18,16 @@
     "@types/styled-components": "^5.1.3",
     "babel-plugin-root-import": "^6.5.0",
     "eslint-config-prettier": "^6.12.0",
+    "eslint-plugin-babel": "^5.3.1",
     "expo": "~39.0.2",
+    "expo-font": "~8.3.0",
     "expo-status-bar": "~1.0.2",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-39.0.2.tar.gz",
     "react-native-gesture-handler": "^1.8.0",
     "react-native-reanimated": "^1.13.1",
-    "react-native-safe-area-context": "^3.1.8",
+    "react-native-safe-area-context": "3.1.4",
     "react-native-screens": "^2.11.0",
     "react-native-web": "~0.13.12",
     "styled-components": "^5.2.0",
