--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "eslint-config-prettier": "^6.12.0",
     "eslint-plugin-babel": "^5.3.1",
     "expo": "~39.0.2",
+    "expo-camera": "~9.0.0",
     "expo-font": "~8.3.0",
     "expo-status-bar": "~1.0.2",
+    "mobx-react": "^7.0.0",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-39.0.2.tar.gz",
@@ -34,7 +36,8 @@
     "typescript": "^4.0.3"
   },
   "devDependencies": {
-    "@babel/core": "~7.9.0"
+    "@babel/core": "~7.9.0",
+    "@babel/plugin-proposal-decorators": "^7.12.1"
   },
   "private": true,
   "eslintConfig": {
