앨범 에서 사진 선택 가능

--- a/package.json
+++ b/package.json
@@ -21,7 +21,10 @@
     "eslint-plugin-babel": "^5.3.1",
     "expo": "~39.0.2",
     "expo-camera": "~9.0.0",
+    "expo-constants": "~9.2.0",
     "expo-font": "~8.3.0",
+    "expo-image-picker": "~9.1.0",
+    "expo-media-library": "~9.2.1",
     "expo-status-bar": "~1.0.2",
     "mobx-react": "^7.0.0",
     "react": "16.13.1",
