--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-native-reanimated": "^1.13.1",
     "react-native-safe-area-context": "3.1.4",
     "react-native-screens": "^2.11.0",
+    "react-native-table-component": "^1.2.1",
     "react-native-web": "~0.13.12",
     "styled-components": "^5.2.0",
     "typescript": "^4.0.3"
